2017-08-15  Matthew Hanson  <matthew_hanson@apple.com>

        Cherry-pick r220722. rdar://problem/33890575

    2017-08-14  Andy Estes  <aestes@apple.com>

            REGRESSION (r220456): Crash in PreviewLoader::shouldCreateForMIMEType() when a ResourceResponse has a null MIME type
            https://bugs.webkit.org/show_bug.cgi?id=175548
            <rdar://problem/33866206>

            Reviewed by Brady Eidson.

            * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
            * TestWebKitAPI/Tests/WebCore/ios/PreviewLoader.cpp: Added.
            (TestWebKitAPI::TEST): Added an API test for PreviewLoader::shouldCreateForMIMEType().

2017-08-09  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r220459. rdar://problem/33820787

    2017-08-09  Daniel Bates  <dabates@apple.com>

            REGRESSION (r219013): OAuth flows are broken when redirecting back to application after authentication
            https://bugs.webkit.org/show_bug.cgi?id=175247
            <rdar://problem/33679804>

            Reviewed by Brady Eidson.

            Add tests for redirects.

            * TestWebKitAPI/Tests/WebKit2Cocoa/DecidePolicyForNavigationAction.mm:
            (TEST):
            * TestWebKitAPI/cocoa/TestProtocol.mm:
            (createRedirectURL):
            (-[TestProtocol startLoading]):

2017-07-31  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r220033. rdar://problem/33619596

    2017-07-28  Brady Eidson  <beidson@apple.com>

            API tests that use URLSchemeHandler are failing.
            https://bugs.webkit.org/show_bug.cgi?id=174950

            Reviewed by Alex Christensen.

            Fix the NoMIMEType test to be correct.

            * TestWebKitAPI/Tests/WebKit2Cocoa/WKURLSchemeHandler-1.mm:
            (-[SchemeHandler initWithData:mimeType:]):
            (-[SchemeHandler webView:startURLSchemeTask:]):
            (TEST):

2017-07-28  Jason Marcell  <jmarcell@apple.com>
