@@ -214,7 +214,7 @@ TEST(DataInteractionTests, ImageToTextarea)
     checkEstimatedSize(dataInteractionSimulator.get(), { 215, 174 });
 }
 
-TEST(DataInteractionTests, ImageInLinkToInput)
+TEST(DataInteractionTests, DISABLED_ImageInLinkToInput)
 {
     RetainPtr<TestWKWebView> webView = adoptNS([[TestWKWebView alloc] initWithFrame:CGRectMake(0, 0, 320, 500)]);
     [webView synchronouslyLoadTestPageNamed:@"image-in-link-and-input"];
@@ -275,7 +275,7 @@ TEST(DataInteractionTests, ContentEditableToContentEditable)
     checkTypeIdentifierPrecedesOtherTypeIdentifier(dataInteractionSimulator.get(), (NSString *)kUTTypeRTFD, (NSString *)kUTTypeUTF8PlainText);
 }
 
-TEST(DataInteractionTests, ContentEditableToTextarea)
+TEST(DataInteractionTests, DISABLED_ContentEditableToTextarea)
 {
     RetainPtr<TestWKWebView> webView = adoptNS([[TestWKWebView alloc] initWithFrame:CGRectMake(0, 0, 320, 500)]);
     RetainPtr<DataInteractionSimulator> dataInteractionSimulator = adoptNS([[DataInteractionSimulator alloc] initWithWebView:webView.get()]);
@@ -325,7 +325,7 @@ TEST(DataInteractionTests, DragImageFromContentEditable)
     EXPECT_WK_STREQ("PASS", [webView stringByEvaluatingJavaScript:@"target.textContent"]);
 }
 
-TEST(DataInteractionTests, TextAreaToInput)
+TEST(DataInteractionTests, DISABLED_TextAreaToInput)
 {
     RetainPtr<TestWKWebView> webView = adoptNS([[TestWKWebView alloc] initWithFrame:CGRectMake(0, 0, 320, 500)]);
     RetainPtr<DataInteractionSimulator> dataInteractionSimulator = adoptNS([[DataInteractionSimulator alloc] initWithWebView:webView.get()]);
@@ -378,7 +378,7 @@ TEST(DataInteractionTests, SinglePlainTextURLTypeIdentifiers)
     EXPECT_WK_STREQ("https://webkit.org/", [webView editorValue].UTF8String);
 }
 
-TEST(DataInteractionTests, LinkToInput)
+TEST(DataInteractionTests, DISABLED_LinkToInput)
 {
     RetainPtr<TestWKWebView> webView = adoptNS([[TestWKWebView alloc] initWithFrame:CGRectMake(0, 0, 320, 500)]);
     [webView synchronouslyLoadTestPageNamed:@"link-and-input"];
@@ -405,7 +405,7 @@ TEST(DataInteractionTests, LinkToInput)
     checkTypeIdentifierIsRegisteredAtIndex(dataInteractionSimulator.get(), (NSString *)kUTTypeURL, 0);
 }
 
-TEST(DataInteractionTests, BackgroundImageLinkToInput)
+TEST(DataInteractionTests, DISABLED_BackgroundImageLinkToInput)
 {
     RetainPtr<TestWKWebView> webView = adoptNS([[TestWKWebView alloc] initWithFrame:CGRectMake(0, 0, 320, 500)]);
     [webView synchronouslyLoadTestPageNamed:@"background-image-link-and-input"];
@@ -684,7 +684,7 @@ TEST(DataInteractionTests, ExternalSourceHTMLToContentEditable)
     EXPECT_TRUE([webView stringByEvaluatingJavaScript:@"!!editor.querySelector('h1')"].boolValue);
 }
 
-TEST(DataInteractionTests, ExternalSourceAttributedStringToContentEditable)
+TEST(DataInteractionTests, DISABLED_ExternalSourceAttributedStringToContentEditable)
 {
     auto webView = adoptNS([[TestWKWebView alloc] initWithFrame:CGRectMake(0, 0, 320, 500)]);
     [webView synchronouslyLoadTestPageNamed:@"autofocus-contenteditable"];
